@@ -49,6 +49,7 @@
     <path refid="test.classpath"/>
     <pathelement location="${build.dir}/classes/test"/>
     <pathelement location="${build.dir}/classes/java"/>
+    <pathelement path="${java.class.path}"/>
   </path>
 
   <target name="build-lucene" unless="lucene.jar.present">
